--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,25 +22,25 @@
             app:srcCompat="@drawable/logo_image" />
 
         <LinearLayout
+            android:id="@+id/signupLayout"
             android:background="@drawable/sign_form_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="380dp"
             android:layout_marginHorizontal="30dp"
-            android:padding="0dp"
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
             <ImageView
-                android:id="@+id/doSignupBtn"
+                android:id="@+id/verificationBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                app:srcCompat="@drawable/sign_up_btn" />
+                app:srcCompat="@drawable/sign_up_veification_btn" />
 
             <me.relex.circleindicator.CircleIndicator3
                 android:id="@+id/indicator"
