--- a/app/src/main/res/layout/fragment_sign_up_first.xml
+++ b/app/src/main/res/layout/fragment_sign_up_first.xml
@@ -35,7 +35,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/inputRegisterPw"
@@ -90,7 +90,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/inputRegisterPwCheck"
