--- a/app/src/main/res/layout/activity_sign_up_verification.xml
+++ b/app/src/main/res/layout/activity_sign_up_verification.xml
@@ -24,7 +24,7 @@
         <LinearLayout
             android:background="@drawable/sign_form_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="260dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="80dp"
             android:orientation="vertical"
@@ -83,11 +83,6 @@
 
             </LinearLayout>
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
             <ImageView
                 android:id="@+id/doSignupBtn"
                 android:layout_width="wrap_content"
@@ -95,11 +90,6 @@
                 android:layout_marginTop="10dp"
                 android:clickable="true"
                 app:srcCompat="@drawable/sign_up_btn" />
-
-            <me.relex.circleindicator.CircleIndicator3
-                android:id="@+id/indicator"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"/>
         </LinearLayout>
 
     </LinearLayout>
