--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -24,7 +24,7 @@
             android:layout_weight="1"
             android:background="@drawable/search_form"
             android:inputType="textPersonName"
-            android:text="검색"
+            android:hint="검색"
             android:textSize="14sp" />
 
         <ImageView
