--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -31,7 +31,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/mypageName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="guest"
@@ -107,12 +107,13 @@
                 android:text="    성별" />
 
             <TextView
-                android:id="@+id/textView23"
+                android:id="@+id/mypageGender"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:hint="성별" />
@@ -129,15 +130,42 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
-                android:text="        키" />
+                android:text="    나이" />
 
             <TextView
-                android:id="@+id/textView30"
+                android:id="@+id/mypageAge"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:textColor="@color/black"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:hint="나이" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView26"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:text="        키" />
+
+            <TextView
+                android:id="@+id/mypageHeight"
+                android:background="@drawable/text_view_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textSize="12sp"
+                android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:hint="키" />
@@ -157,40 +185,16 @@
                 android:text="몸무게" />
 
             <TextView
-                android:id="@+id/textView29"
+                android:id="@+id/mypageWeight"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textSize="12sp"
+                android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_weight="1"
                 android:hint="몸무게" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView26"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:text="    나이" />
-
-            <TextView
-                android:id="@+id/textView28"
-                android:background="@drawable/text_view_form"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textSize="12sp"
-                android:padding="5dp"
-                android:layout_weight="1"
-                android:hint="나이" />
         </LinearLayout>
     </LinearLayout>
 
