--- a/app/src/main/res/layout/fragment_main_mypage_update.xml
+++ b/app/src/main/res/layout/fragment_main_mypage_update.xml
@@ -78,7 +78,7 @@
                 android:text="이메일" />
 
             <EditText
-                android:id="@+id/textView23"
+                android:id="@+id/updateEmail"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,7 +104,7 @@
                 android:text="    이름" />
 
             <EditText
-                android:id="@+id/textView1"
+                android:id="@+id/updateName"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
                 android:text="    성별" />
 
             <EditText
-                android:id="@+id/textView3"
+                android:id="@+id/updateGender"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -148,6 +148,32 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textView26"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:text="    나이" />
+
+            <EditText
+                android:id="@+id/updateAge"
+                android:background="@drawable/text_view_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textSize="12sp"
+                android:padding="5dp"
+                android:layout_weight="1"
+                android:inputType="numberSigned"
+                android:text="나이" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
                 android:id="@+id/textView24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -155,7 +181,7 @@
                 android:text="        키" />
 
             <EditText
-                android:id="@+id/textView30"
+                android:id="@+id/updateHeight"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -181,7 +207,7 @@
                 android:text="몸무게" />
 
             <EditText
-                android:id="@+id/textView29"
+                android:id="@+id/updateWeight"
                 android:background="@drawable/text_view_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -194,32 +220,6 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView26"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:text="    나이" />
-
-            <EditText
-                android:id="@+id/textView28"
-                android:background="@drawable/text_view_form"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textSize="12sp"
-                android:padding="5dp"
-                android:layout_weight="1"
-                android:inputType="numberSigned"
-                android:text="나이" />
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -227,7 +227,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/registerBtn"
+                android:id="@+id/updateOkBtn"
                 android:background="@drawable/btn_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -239,7 +239,7 @@
                 android:clickable="true"/>
 
             <TextView
-                android:id="@+id/profileCancelBtn"
+                android:id="@+id/updateCancelBtn"
                 android:background="@drawable/btn_form"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
