--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -22,20 +22,76 @@
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/line" />
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"/>
 
-        <ListView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/cart_list_bg"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginVertical="3dp"
+            app:srcCompat="@drawable/bonobono" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/cartItemName"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="15sp"
+                android:inputType="textPersonName"
+                android:text="보노보노" />
+
+            <EditText
+                android:id="@+id/cartItemNote"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ems="10"
+                android:textSize="14sp"
+                android:textColor="#9A9A9A"
+                android:inputType="textPersonName"
+                android:text="귀여운 보노보노" />
+
+            <EditText
+                android:id="@+id/cartItemPrice"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginTop="5dp"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:inputType="numberSigned"
+                android:text="1,000" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="80dp"
         android:orientation="horizontal">
 
@@ -61,79 +117,96 @@
             android:text="10000" />
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="80dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="20dp">
 
-        <TextView
-            android:id="@+id/textView18"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="총 배송비" />
+            android:visibility="invisible">
+            <TextView
+                android:id="@+id/addBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="추가"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+        </LinearLayout>
 
-        <View
-            android:id="@+id/view2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="10" />
-
-        <TextView
-            android:id="@+id/textView19"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:text="10000" />
-    </LinearLayout>
+            android:visibility="invisible">
 
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        app:srcCompat="@drawable/line" />
+            <TextView
+                android:id="@+id/addSetBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginRight="10dp"
+                android:text="저장"
+                android:textColor="@color/black"
+                android:clickable="true"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="80dp"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/addCancelBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="취소"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView21"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="총 결제예상금액" />
+            android:visibility="visible">
+            <TextView
+                android:id="@+id/itemUpdateBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="변경"
+                android:textColor="@color/black"
+                android:clickable="true"/>
 
-        <View
-            android:id="@+id/view3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="10" />
+            <TextView
+                android:id="@+id/itemDeleteBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginHorizontal="10dp"
+                android:text="삭제"
+                android:textColor="@color/black"
+                android:clickable="true"/>
 
-        <TextView
-            android:id="@+id/textView20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:text="20000" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/itemUrlBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="사이트 이동"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/updateBtn"
-        android:background="@drawable/btn_form"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="30dp"
-        android:text="수정"
-        android:textColor="@color/black"
-        android:clickable="true"/>
+
+    </FrameLayout>
 
 </LinearLayout>
