--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -23,75 +23,18 @@
         app:srcCompat="@drawable/line" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cartRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="190dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/cart_list_bg"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginVertical="3dp"
-            app:srcCompat="@drawable/bonobono" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <EditText
-                android:id="@+id/cartItemName"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="15sp"
-                android:inputType="textPersonName"
-                android:text="보노보노" />
-
-            <EditText
-                android:id="@+id/cartItemNote"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:ems="10"
-                android:textSize="14sp"
-                android:textColor="#9A9A9A"
-                android:inputType="textPersonName"
-                android:text="귀여운 보노보노" />
-
-            <EditText
-                android:id="@+id/cartItemPrice"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="5dp"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:inputType="numberSigned"
-                android:text="1,000" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="80dp"
         android:orientation="horizontal">
 
@@ -117,15 +60,89 @@
             android:text="10000" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/addItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/cart_list_bg"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginVertical="3dp"
+            app:srcCompat="@drawable/bonobono" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/addCartItemName"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="13sp"
+                android:inputType="textPersonName"
+                android:hint="이름" />
+
+            <EditText
+                android:id="@+id/addCartItemNote"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:ems="10"
+                android:textSize="13sp"
+                android:textColor="#9A9A9A"
+                android:inputType="textPersonName"
+                android:hint="설명" />
+
+            <EditText
+                android:id="@+id/addCartItemPrice"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginTop="3dp"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:inputType="numberSigned"
+                android:hint="가격" />
+
+            <EditText
+                android:id="@+id/addCartItemUrl"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginTop="2dp"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:inputType="numberSigned"
+                android:hint="url" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
 
         <LinearLayout
+            android:id="@+id/defaultBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible">
+            android:visibility="gone">
             <TextView
                 android:id="@+id/addBtn"
                 android:background="@drawable/btn_form"
@@ -139,9 +156,10 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/addItemBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/addSetBtn"
@@ -168,9 +186,10 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/selectItemBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible">
+            android:visibility="gone">
             <TextView
                 android:id="@+id/itemUpdateBtn"
                 android:background="@drawable/btn_form"
