--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -67,7 +67,7 @@
         android:background="@drawable/cart_list_bg"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/imageView4"
@@ -91,7 +91,7 @@
                 android:ems="10"
                 android:textSize="13sp"
                 android:inputType="textPersonName"
-                android:hint="이름" />
+                android:hint="Shop 이름" />
 
             <EditText
                 android:id="@+id/addCartItemNote"
@@ -101,7 +101,6 @@
                 android:layout_marginTop="3dp"
                 android:ems="10"
                 android:textSize="13sp"
-                android:textColor="#9A9A9A"
                 android:inputType="textPersonName"
                 android:hint="설명" />
 
@@ -113,8 +112,7 @@
                 android:ems="10"
                 android:layout_marginTop="3dp"
                 android:textSize="13sp"
-                android:textStyle="bold"
-                android:inputType="numberSigned"
+                android:inputType="number"
                 android:hint="가격" />
 
             <EditText
@@ -125,9 +123,8 @@
                 android:ems="10"
                 android:layout_marginTop="2dp"
                 android:textSize="13sp"
-                android:textStyle="bold"
-                android:inputType="numberSigned"
-                android:hint="url" />
+                android:inputType="textPersonName"
+                android:hint="URL" />
 
         </LinearLayout>
 
@@ -142,7 +139,7 @@
             android:id="@+id/defaultBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone">
+            android:visibility="visible">
             <TextView
                 android:id="@+id/addBtn"
                 android:background="@drawable/btn_form"
@@ -159,7 +156,7 @@
             android:id="@+id/addItemBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/addSetBtn"
