--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -20,16 +20,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         app:srcCompat="@drawable/line" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="190dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"/>
-
-
+        android:layout_width="960px"
+        android:layout_height="900px"
+        android:layout_marginTop="0dp"/>
+    <!-- 190 -->
 
     <LinearLayout
         android:layout_width="wrap_content"
