--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -181,7 +181,7 @@
                 android:clickable="true"/>
         </LinearLayout>
 
-        <LinearLayout
+        <!--<LinearLayout
             android:id="@+id/selectItemBtnGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -219,7 +219,7 @@
                 android:text="사이트 이동"
                 android:textColor="@color/black"
                 android:clickable="true"/>
-        </LinearLayout>
+        </LinearLayout>-->
 
 
     </FrameLayout>
