장바구니 수정 구현 완

--- a/app/src/main/res/layout/cartlist_item.xml
+++ b/app/src/main/res/layout/cartlist_item.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/cartItemImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
             app:srcCompat="@drawable/bonobono" />
@@ -72,6 +72,18 @@
                 android:textStyle="bold"
                 android:inputType="numberSigned"
                 android:text="1,000" />
+
+            <EditText
+                android:id="@+id/cartItemUrl"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginTop="5dp"
+                android:textSize="14sp"
+                android:inputType="textPersonName"
+                android:text="URL"
+                android:visibility="gone"/>
        </LinearLayout>
 
     </LinearLayout>
@@ -80,6 +92,7 @@
         android:id="@+id/selectAction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
         android:visibility="gone">
 
         <TextView
