내 옷장 조회, 추가, 수정, 삭제 구현 완

--- a/app/src/main/res/layout/closetlist_item.xml
+++ b/app/src/main/res/layout/closetlist_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cartItem"
+    android:id="@+id/closetItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -12,9 +12,9 @@
         android:background="@drawable/list_bg">
 
         <ImageView
-            android:id="@+id/cartItemImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/closetItemImage"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
             app:srcCompat="@drawable/bonobono" />
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/cartItemName"
+                    android:id="@+id/closetItemName"
                     android:background="@null"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
                     android:text="보노보노" />
 
                 <ImageView
-                    android:id="@+id/selectItemCancel"
+                    android:id="@+id/mSelectItemCancel"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="right"
@@ -50,7 +50,7 @@
             </FrameLayout>
 
             <EditText
-                android:id="@+id/cartItemNote"
+                android:id="@+id/closetItemNote"
                 android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,69 +62,47 @@
                 android:text="귀여운 보노보노" />
 
             <EditText
-                android:id="@+id/cartItemPrice"
+                android:id="@+id/closetItemKind"
                 android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:layout_marginTop="5dp"
                 android:textSize="14sp"
-                android:textStyle="bold"
                 android:inputType="numberSigned"
                 android:text="1,000" />
-
-            <EditText
-                android:id="@+id/cartItemUrl"
-                android:background="@null"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_marginTop="5dp"
-                android:textSize="14sp"
-                android:inputType="textPersonName"
-                android:text="URL"
-                android:visibility="gone"/>
-       </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/selectAction"
+        android:id="@+id/mSelectAction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:visibility="gone">
 
         <TextView
-            android:id="@+id/changeCartItem"
+            android:id="@+id/changeClosetItem"
             android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginLeft="20dp"
             android:paddingVertical="10dp"
             android:gravity="center"
             android:text="변경" />
 
         <TextView
-            android:id="@+id/deleteCartItem"
+            android:id="@+id/deleteClosetItem"
             android:background="@drawable/listitem_btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingVertical="10dp"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginHorizontal="20dp"
             android:gravity="center"
             android:text="제거" />
-
-        <TextView
-            android:id="@+id/goCartItemUrl"
-            android:background="@drawable/listitem_btn_form"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingVertical="10dp"
-            android:gravity="center"
-            android:text="사이트 이동" />
     </LinearLayout>
 
 </LinearLayout>
