--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -51,7 +51,7 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/updateBtn"
+            android:id="@+id/myClosetBtn"
             android:background="@drawable/btn_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
