--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -20,30 +20,126 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         app:srcCompat="@drawable/line" />
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cRecyclerView"
+        android:layout_width="960px"
+        android:layout_height="900px"/>
+    <!-- 190 -->
+
+    <LinearLayout
+        android:id="@+id/addClosetItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/list_bg"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:visibility="gone">
 
-        <ListView
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginVertical="3dp"
+            app:srcCompat="@drawable/bonobono" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
+            <EditText
+                android:id="@+id/addClosetItemName"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="13sp"
+                android:inputType="textPersonName"
+                android:hint="옷 이름" />
 
+            <EditText
+                android:id="@+id/addClosetItemNote"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:ems="10"
+                android:textSize="13sp"
+                android:inputType="textPersonName"
+                android:hint="설명" />
 
-    <TextView
-        android:id="@+id/closetUpdateBtn"
-        android:background="@drawable/btn_form"
+            <EditText
+                android:id="@+id/addClosetItemKind"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginTop="2dp"
+                android:textSize="13sp"
+                android:inputType="textPersonName"
+                android:hint="종류" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="30dp"
-        android:text="수정"
-        android:textColor="@color/black"
-        android:clickable="true"/>
+        android:layout_marginTop="20dp">
+
+        <LinearLayout
+            android:id="@+id/mDefaultBtnGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible">
+            <TextView
+                android:id="@+id/mAddBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="추가"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/mAddItemBtnGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/mAddSetBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginRight="10dp"
+                android:text="저장"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+
+            <TextView
+                android:id="@+id/mAddCancelBtn"
+                android:background="@drawable/btn_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="30dp"
+                android:text="취소"
+                android:textColor="@color/black"
+                android:clickable="true"/>
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
