인증코드 조건문, 정보 수정 로드, 마이페이지 정보 성별 등 예외 처리 수정&추가

--- a/app/src/main/res/layout/closetlist_item.xml
+++ b/app/src/main/res/layout/closetlist_item.xml
@@ -17,7 +17,7 @@
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
-            app:srcCompat="@drawable/bonobono" />
+            app:srcCompat="@drawable/closet_img" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,8 +69,8 @@
                 android:ems="10"
                 android:layout_marginTop="5dp"
                 android:textSize="14sp"
-                android:inputType="numberSigned"
-                android:text="1,000" />
+                android:inputType="textPersonName"
+                android:text="후드티" />
         </LinearLayout>
 
     </LinearLayout>
