--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -44,7 +44,7 @@
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
-            app:srcCompat="@drawable/bonobono" />
+            app:srcCompat="@drawable/closet_img" />
 
         <LinearLayout
             android:layout_width="match_parent"
