--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,13 @@
                 android:background="@drawable/back_icon"
                 android:visibility="invisible" />
 
+            <ImageView
+                android:id="@+id/backBtn3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_icon"
+                android:visibility="invisible" />
+
         </FrameLayout>
 
         <ImageView
