--- a/app/src/main/res/layout/fragment_main_cart.xml
+++ b/app/src/main/res/layout/fragment_main_cart.xml
@@ -73,7 +73,7 @@
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
             android:layout_marginVertical="3dp"
-            app:srcCompat="@drawable/bonobono" />
+            app:srcCompat="@drawable/cart_img" />
 
         <LinearLayout
             android:layout_width="match_parent"
