--- a/app/src/main/res/layout/recommenlist_item.xml
+++ b/app/src/main/res/layout/recommenlist_item.xml
@@ -18,7 +18,7 @@
 
     <ImageView
         android:id="@+id/recommenImg"
-        android:background="@drawable/bonobono"
+        android:background="@drawable/shop_img"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginRight="100dp"/>
