내 옷장 이미지업로드 구현

--- a/app/src/main/res/layout/fragment_mypage_mycloset.xml
+++ b/app/src/main/res/layout/fragment_mypage_mycloset.xml
@@ -39,7 +39,7 @@
         android:visibility="gone">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/addClosetItemImg"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginRight="10dp"
