프로필 이미지 보완+

--- a/app/src/main/res/layout/fragment_main_mypage_update.xml
+++ b/app/src/main/res/layout/fragment_main_mypage_update.xml
@@ -31,35 +31,35 @@
         android:layout_marginTop="10dp"
         android:paddingHorizontal="50dp"
         android:paddingVertical="20dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/imageView14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/profile_img" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/mypageUimg"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                app:civ_border_overlay="true"
+                app:civ_border_width="3dp"
+                app:civ_border_color="#000000"
+                android:src="@drawable/guest"
+                tools:ignore="MissingConstraints" />
 
             <ImageView
                 android:id="@+id/imageView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView14"
+                app:layout_constraintBottom_toBottomOf="@+id/mypageUimg"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.65"
+                app:layout_constraintHorizontal_bias="0.93"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.85"
+                app:layout_constraintVertical_bias="0.93"
                 app:srcCompat="@drawable/plus_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
